# factorforge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
data/corpus/: factor_timing_and_overfitting.md  low_volatility.md  momentum.md  quality_profitability.md  size_effect.md  value_premium.md
evals/: dataset.py  metrics.py  run_evals.py
src/factorforge/: __init__.py  api.py  audit.py  cli.py  config.py  factory.py  knowledge.py  logging.py  models.py  orchestrator.py  telemetry.py
src/factorforge/agents/: roles.py
src/factorforge/agents/skills/backtester/: SKILL.md
src/factorforge/agents/skills/critic/: SKILL.md
src/factorforge/agents/skills/hypothesizer/: SKILL.md
src/factorforge/agents/skills/reporter/: SKILL.md
src/factorforge/agents/skills/researcher/: SKILL.md
src/factorforge/backends/: base.py  claude.py  mock.py
src/factorforge/backtest/: data.py  diagnostics.py  engine.py  factor.py  fetch_french.py  tools.py
src/factorforge/citations/: verifier.py
src/factorforge/corpus/: loader.py  structure.py
src/factorforge/extract/: entities.py  prompts.py  vocab.py
src/factorforge/graph/: build.py  schema.py  store.py
src/factorforge/mcp_server/: __main__.py  server.py
src/factorforge/providers/: base.py  mock.py  vertex.py
src/factorforge/retrieval/: filters.py  graph_nav.py  retriever.py  tree_search.py
tests/: conftest.py  test_backtest.py  test_cli_api.py  test_corpus.py  test_critic.py  test_diagnostics.py  test_evals.py  test_extract_citations.py  test_graph.py  test_mcp_server.py  test_pipeline.py  test_retrieval.py  test_telemetry.py
workflows/: ci.yml
