[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factorforge"
version = "0.1.0"
description = "Auditable quant-research engine: a vectorless (knowledge-graph + hierarchical-doc) evidence-first retrieval layer feeding a Claude multi-agent factor-research + backtest pipeline. MCP-served, eval-gated. Research/educational — not financial advice."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Aman Patel" }]
keywords = [
    "claude", "agent-sdk", "mcp", "knowledge-graph", "vectorless-rag",
    "evidence-first", "quant-finance", "factor-investing", "backtesting",
    "evals", "vertex-ai",
]

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "tenacity>=8.3",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "networkx>=3.2",          # knowledge-graph store (in-process, behind GraphStore interface)
    "numpy>=1.26",            # deterministic synthetic panel + factor/diagnostics math
    # bt/ffn still target the pandas 2.x line and lag pandas API removals; cap to <3 so the
    # backtest is deterministic and reproducible (pandas 3.0 drops long-deprecated surface).
    "pandas>=2.2,<3",         # returns/price panels; bt operates on DataFrames
    "bt>=1.1,<2",             # backtest engine (MIT); pulls ffn (MIT) transitively
    "mcp>=1.27,<2",           # MCP server (FastMCP); v2 has breaking changes — pin <2
]

[project.optional-dependencies]
# Real structured-generation path: Claude via AnthropicVertex (entity/relation extraction,
# node summaries, tree-search navigation). Reviewers/CI never need this — the mock provider
# is the default and runs offline.
vertex = ["anthropic[vertex]>=0.40"]   # the [vertex] extra pulls google-auth for AnthropicVertex

# Real multi-agent pipeline: Claude Agent SDK on Vertex, connected to the standalone KG MCP
# server. Optional for the same reason — the deterministic mock backend is the default.
claude = ["claude-agent-sdk>=0.1.0"]

# Fetch real Fama-French factor data locally (never redistributed, never used in CI).
# setuptools is required: pandas-datareader still imports the stdlib `distutils`, which was
# removed in Python 3.12 — setuptools ships a vendored shim that restores `import distutils`.
french = ["pandas-datareader>=0.10", "setuptools>=68"]

dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
factorforge = "factorforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/factorforge"]

[tool.hatch.build.targets.sdist]
include = ["src", "evals", "data", "tests", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "evals", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer's API requires Option()/Argument() calls as parameter defaults.
"src/factorforge/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src", "evals"]

# Third-party libraries without (complete) type information. Kept narrow and explicit so the
# rest of the codebase stays strict.
[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "bt.*",
    "ffn.*",
    "scipy.*",
    "pandas",
    "pandas.*",
    "pandas_datareader.*",
    "claude_agent_sdk.*",
    "networkx.*",
]
ignore_missing_imports = true

# The in-process @tool decorator from the optional Agent SDK is untyped when the SDK isn't
# installed (CI), so relax just the untyped-decorator check for the Claude backend module.
[[tool.mypy.overrides]]
module = ["factorforge.backends.claude"]
disallow_untyped_decorators = false
